Oferta Lab, Acad, Repositorio, Inicio de sesion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ body {
 }
 
 *{
-    cursor: url("cursor.png"), auto !important;
+    cursor: url("cursor3.png") 16 16, auto !important;
 }
 
 /* Modo Claro */
